# url-shortener-drf

./: Dockerfile  Dockerfile.ci  Dockerfile.test  README.md  dev-requirements.txt  docker-compose-ci.yml  docker-compose-test.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.test.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
app/: manage.py  pytest.ini
app/shortener/: models.py  serializers.py  tests.py  views.py
app/shortener/management/commands/: wait_for_db.py
app/shortener/migrations/: 0001_initial.py  0002_shorturl_shortener_s_short_c_a8767f_idx_and_more.py
app/url_shortener_drf/: asgi.py  settings.py  urls.py  wsgi.py
url_shortener_drf/: settings.py
